feat: добавлена возможность добавлять ботов в автозапуск
